full working playground with cpp and java